# celery-tech-task

./: .gitignore  README.md  docker-compose.dev.yml  makefile
be/: .dockerignore  Dockerfile  Dockerfile.test
be/app/: alembic.ini  main.py  pyproject.toml
be/app/__scripts/: entrypoint.sh  migrations.sh
be/app/db/: database.py  models.py
be/app/db/alembic/: env.py
be/app/db/alembic/versions/: 8b8c10074547_all_tables.py
be/app/schemas/: entities.py
be/app/tests/: conftest.py  test_api.py  test_tasks.py
be/app/worker/: celery_app.py  tasks.py
be/env/example/: .env.example
fe/: .dockerignore  Dockerfile
fe/app/: vite.config.js
fe/app/src/: App.css  App.jsx
mock_api/: Dockerfile  main.py  requirements.txt
